@@ -66,7 +66,7 @@ static menuitem msource, mdisplay, mload, msave, mloadhistory,
     msavehistory, mpaste, mpastecmds, mcopy, mcopypaste, mlazy, mconfig,
     mls, mrm, msearch, mhelp, mmanintro, mmanref, mmandata,
     mmanext, mmanlang, mmanadmin, mman0, mapropos, mhelpstart, mhelpsearch, 
-    mFAQ, mrwFAQ, mpkgl, mpkgm, mpkgi, mpkgil, mpkgu, /*mpkgb, mpkgbu,*/
+    msearchRsite, mFAQ, mrwFAQ, mpkgl, mpkgm, mpkgi, mpkgil, mpkgu,
     mde, mCRAN, mrepos;
 static int lmanintro, lmanref, lmandata, lmanlang, lmanext, lmanadmin;
 static menu m, mman;
@@ -485,6 +485,21 @@ static void menuhelpsearch(control m)
     }
 }
 
+static void menusearchRsite(control m)
+{
+    char *s;
+    static char olds[256] = "";
+
+    if (!ConsoleAcceptCmd) return;
+    s = askstring(G_("Search for words in help list archives and documentation"), olds);
+    if (s && strlen(s)) {
+	snprintf(cmd, 1024, "RSiteSearch(\"%s\")", s);
+	if (strlen(s) > 255) s[255] = '\0';
+	strcpy(olds, s);
+	consolecmd(RConsole, cmd);
+    }
+}
+
 static void menuapropos(control m)
 {
     char *s;
@@ -560,13 +575,13 @@ static void menuact(control m)
 	enable(msearch);
 	enable(mhelp);
 	enable(mhelpsearch);
+	enable(msearchRsite);
 	enable(mapropos);
 	enable(mpkgl);
 	enable(mpkgm);
 	enable(mpkgi);
 	enable(mpkgil);
 	enable(mpkgu);
-	/* enable(mpkgb); enable(mpkgbu); */
 	enable(mde);
 	enable(mCRAN);
 	enable(mrepos);
@@ -579,13 +594,13 @@ static void menuact(control m)
 	disable(msearch);
 	disable(mhelp);
 	disable(mhelpsearch);
+	disable(msearchRsite);
 	disable(mapropos);
 	disable(mpkgl);
 	disable(mpkgm);
 	disable(mpkgi);
 	disable(mpkgil);
 	disable(mpkgu);
-	/* disable(mpkgb); disable(mpkgbu); */
 	disable(mde);
 	disable(mCRAN);
 	disable(mrepos);
@@ -985,6 +1000,8 @@ int RguiCommonHelp(menu m)
     MCHECK(mhelpstart = newmenuitem(G_("Html help"), 0, menuhelpstart));
     if (!check_doc_file("doc\\html\\rwin.html")) disable(mhelpstart);
     MCHECK(mhelpsearch = newmenuitem(G_("Search help..."), 0, menuhelpsearch));
+    MCHECK(msearchRsite = newmenuitem(G_("search.r-project.org ..."), 0, 
+				      menusearchRsite));
     MCHECK(newmenuitem("-", 0, NULL));
     MCHECK(mapropos = newmenuitem(G_("Apropos..."), 0, menuapropos));
     MCHECK(newmenuitem("-", 0, NULL));
